--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "bootstrap-vue": "^0.18.0",
+    "lodash": "^4.17.4",
     "vue": "^2.3.3",
-    "vue-router": "^2.6.0"
+    "vue-router": "^2.6.0",
+    "vue-strap": "^1.1.37"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
